fix compiler warnings in aliter

--- a/rebar.config
+++ b/rebar.config
@@ -2,10 +2,7 @@
 
 {lib_dirs, ["deps"]}.
 
-{deps, [ {'erlang-redis', "",
-               {git, "https://github.com/gar1t/erlang-redis.git",
-                {ref, "fac07e2b6d75d3866221f953c12c3fd066bc1ad1"}}}
-       , {erldis, "",
+{deps, [ {erldis, "",
                {git, "https://github.com/cstar/erldis.git",
                 {tag, "v0.4"}}}
        , {gen_nb_server, "",
