little bit further in startup

--- a/rebar.config
+++ b/rebar.config
@@ -2,13 +2,24 @@
 
 {lib_dirs, ["deps"]}.
 
+{erl_opts, [ warnings_as_errors
+           , debug_info
+           , {parse_transform, lager_transform}
+           ]}.
+
+{xref_checks, [ undefined_function_calls
+              , deprecated_function_calls]}.
+
 {deps, [ {erldis, "",
                {git, "https://github.com/cstar/erldis.git",
                 {tag, "v0.4"}}}
        , {gen_nb_server, "",
                {git, "https://github.com/kevsmith/gen_nb_server.git",
-                {tag, "v1.0"}}}
+                {ref, "ce8c342cb82b33368a6bc37893db116fd7d1f543"}}}
        , {lager, "",
                {git, "https://github.com/erlang-lager/lager.git",
                  {tag, "3.5.1"}}}
+       , {'erlang-redis', "",
+               {git, "https://github.com/gar1t/erlang-redis.git",
+                 {ref, "fac07e2b6d75d3866221f953c12c3fd066bc1ad1"}}}
        ]}.
