--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,7 @@
 
 {lib_dirs, ["deps"]}.
 
-{erl_opts, [ warnings_as_errors
-           , debug_info
+{erl_opts, [ debug_info
            , {parse_transform, lager_transform}
            ]}.
 
