OTP20 zone server

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 
 {lib_dirs, ["deps"]}.
 
-{erl_opts, [ debug_info
+{erl_opts, [ warnings_as_errors
+           , debug_info
            , {parse_transform, lager_transform}
            ]}.
 
