--- a/priv/app.config
+++ b/priv/app.config
@@ -1,12 +1,5 @@
-[
-  {
-   sasl,
-   [
-     {sasl_error_logger, {file, "log/sasl.log"}}
-   ]
- },
-
- {lager,
+[ {sasl, [{sasl_error_logger, {file, "log/sasl.log"}}]}
+, {lager,
     [ {log_root, "log/"}
     , {handlers, [ {lager_console_backend, [{level,info}]}
                  , {lager_file_backend, [{file, "error.log"}, {level, error}]}
@@ -21,6 +14,4 @@
                  {critical,  "\e[1;35m" },
                  {alert,     "\e[1;44m" },
                  {emergency, "\e[1;41m" } ]}
-    ]
-   }
-].
+    ]}].
