added aliter NPCs

--- a/priv/app.config
+++ b/priv/app.config
@@ -6,6 +6,7 @@
                  , {lager_file_backend, [{file, "console.log"}, {level, info}]}
                  ]}
     , {colored, true}
+    , {error_logger_hwm, 100}
     , {colors, [ {debug,     "\e[0;38m" },
                  {info,      "\e[1;37m" },
                  {notice,    "\e[1;36m" },
