--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{require_otp_vsn, "R19|20"}.
+{require_otp_vsn, "R20"}.
 
 {lib_dirs, ["deps"]}.
 
@@ -16,7 +16,7 @@
        , {lager, "",
                {git, "https://github.com/erlang-lager/lager.git",
                  {tag, "3.5.1"}}}
-       , {'erlang-redis', "",
-               {git, "https://github.com/gar1t/erlang-redis.git",
-                 {ref, "fac07e2b6d75d3866221f953c12c3fd066bc1ad1"}}}
+       , {eredis, "",
+               {git, "https://github.com/wooga/eredis",
+                 {tag, "v1.1.0"}}}
        ]}.
