--- a/rebar.config
+++ b/rebar.config
@@ -19,4 +19,7 @@
        , {eredis, "",
                {git, "https://github.com/wooga/eredis",
                  {tag, "v1.1.0"}}}
+       , {ranch, "",
+               {git, "https://github.com/ninenines/ranch",
+                 {tag, "1.4.0"}}}
        ]}.
