--- a/rebar.config
+++ b/rebar.config
@@ -10,10 +10,7 @@
 {xref_checks, [ undefined_function_calls
               , deprecated_function_calls]}.
 
-{deps, [ {gen_nb_server, "",
-               {git, "https://github.com/kevsmith/gen_nb_server.git",
-                {ref, "ce8c342cb82b33368a6bc37893db116fd7d1f543"}}}
-       , {lager, "",
+{deps, [ {lager, "",
                {git, "https://github.com/erlang-lager/lager.git",
                  {tag, "3.5.1"}}}
        , {eredis, "",
